syntax = "proto3";
package WorkerNode;

option go_package = "github.com/resource-aware-jds/resource-aware-jds/generated/proto";

import "google/protobuf/empty.proto";

service WorkerNodeContainerReceiver {
  rpc SubmitSuccessTask(SubmitSuccessTaskRequest) returns (google.protobuf.Empty) {}
  rpc ReportTaskFailure(ReportTaskFailureRequest) returns (google.protobuf.Empty) {}
  rpc GetTaskFromQueue(GetTaskPayload) returns (Task) {}
}

message GetTaskPayload {
  string ImageUrl=1;
}

message SubmitSuccessTaskRequest {
  string ID=1;
  bytes Results=2;
}

message ReportTaskFailureRequest {
  string ID=1;
  string ErrorDetail=2;
}

message Task {
  string ID = 1;
  string JobID = 2;
  bytes TaskAttributes = 3;
}
